# InSilicoICH

./: .gitignore  CT_dataset_pipeline.py  MANIFEST.in  README.md  README.rst  batchmode_CT_dataset_pipeline.sge  example_config.toml  example_config.txt  example_inclusion_criteria.toml  generate_insilicoICH5k.sh  inclusion_criteria.toml  large_dataset_criteria.toml  main_app.py  pyproject.toml  run_batchmode.sh  run_experiments.sh  spikes.py  test.py  test_XCIST.py  test_config.toml  verify_hemorrhages.py
.github/workflows/: python-app.yml
assets/: simulation_parameters.csv
default_study/: default_study.csv
docs/: .buildinfo  .buildinfo.bak  README.md  api.html  api.rst  build_docs.sh  conf.py  contributing.html  demo_link.rst  docs.html  faq.html  function_reference.html  genindex.html  index.html  index.rst  make_json.py  make_sample_dataset.py  metadata.csv  metadata.json  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html  usage.rst
docs/_sources/: index.rst.txt
docs/_static/: alabaster.css
docs/notebooks/: 00_running_simulations.html  01_pediatric_denoising_evaluation.html  02_pediatric_denoising_evaluation.html
docs/sphinx/source/: conf.py  function_reference.rst
docs/static_demo/demo/: index.html  make_sample_dataset.py
docs_sphinx/source/: function_reference.rst
experiments/: image_acquisition_comparison.py  lesion_characteristics.py  patient_characteristics.py  utils.py
for_miguel/: README.md  make_sample_dataset.py
notebooks/: 00_basic_eda.ipynb  01_ct_head_simulations.ipynb  01_fracture.ipynb  01_phantoms.ipynb  02_scanners.ipynb  03_epidural_subdural_demo.ipynb  03_studies.ipynb  04_iq_phantoms.ipynb  04_pcct_scanners.ipynb  99_enoise_test.ipynb  99_helical_test.ipynb  Aim_1point1.ipynb  IQ_evaluations.ipynb  MASTER_DATASET.csv  MRI_brain_atlas_groundtruth.ipynb  QA_report.ipynb  README.md  RSNA_BHSD_explore.ipynb  RSNA_BHSD_fitting.ipynb  classify.ipynb  classify_module.py  classify_module_v2.py  combined_dataset_analysis.ipynb  data.py  instance2022_explore.ipynb  lesion_playground.ipynb  measures.py  plot.py  recon_test.ipynb  temp.ipynb  temp_NIHPD_testing.ipynb  temp_skull_method_test.ipynb  test_IO_volume.ipynb  test_UNC.ipynb  texture_analysis.py  texture_analysis_pilot.ipynb  utils.py  viewing_simulation_results.ipynb  z_NIHPD_testing.ipynb
notebooks/tutorials/: 01_phantoms.ipynb  02_scanners.ipynb  03_studies.ipynb
scripts/: generate_qa_report.py
src/insilicoICH/: __init__.py  artifact_generation.py  hooks.py  image_acquisition.py  lesion_definition.py  model_assessment.py  pipeline.py  recruit_study.py  study.py  transforms.py
src/insilicoICH/configs/: default.toml
src/insilicoICH/defaults/: Siemens_DefinitionFlash  Siemens_NaetomAlpha
src/insilicoICH/distributions/: BHSD_volume_distributions.csv
src/insilicoICH/phantoms/: __init__.py  (+3 more)
src/pedsilicoICH/: __init__.py  artifact_generation.py  image_acquisition.py  insert_lesion_3D.py  lesion_definition.py  lesion_insertion.py  phantoms.py  pipeline.py  recruit_study.py  study.py
test/: test.csv
test/case_000/: metadata_0.csv
tests/: CTP404_groundtruth.dcm  test_XCIST.py  test_cli.py  test_fracture.py  test_image_acquisition.py  test_inclusion_criteria.toml  test_ivh_sah.py  test_lesion_fracture.py  test_lesion_generation.py  test_lesions.py  test_phantoms.py  test_pipeline.py  test_study.py  test_transforms.py  test_xcist.py  utils.py
(+40 files in other folders)
