[project]
name = "PedSilicoICH"
version = "0.0.2"
authors = [
  {name="Brandon Nelson", email="brandon.nelson@fda.hhs.gov"},
  {name="Jayse M. Weaver", email="jayse.weaver@fda.hhs.gov"}
]
description = "CT Simulations of virtual pediatric intracranial hemorrhage for computer aided triage device evaluation"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
  "python-dotenv",
  "nibabel",
  "scikit-image",
  "scipy",
  "numpy",
  "torchvision",
  "VITools @ git+https://github.com/DIDSR/VITools.git"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/brandonjnelsonFDA/PedSilicoICH"
Issues = "https://github.com/brandonjnelsonFDA/PedSilicoICH/issues"
