[project]
name = "InSilicoICH"
version = "0.1.0"
authors = [
  {name="Brandon Nelson", email="brandon.nelson@fda.hhs.gov"},
  {name="Jayse M. Weaver", email="jayse.weaver@fda.hhs.gov"}
]
description = "CT Simulations of virtual pediatric intracranial hemorrhage for computer aided triage device evaluation"
readme = "README.rst"
requires-python = "<3.13"
dependencies = [
  "python-dotenv",
  "nibabel",
  "scikit-image",
  "scipy",
  "monai==1.3.2",
  "pandas",
  "numpy",
  "pynrrd",
  "pydicom==2.4.4",
  "pytest",
  "requests",
  "gecatsim @ git+https://github.com/xcist/main.git"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/DIDSR/InSilicoICH"
Issues = "https://github.com/DIDSR/InSilicoICH/issues"

[project.scripts]
generate = "insilicoICH.pipeline:insilicoich_cli"
insilicoich = "insilicoICH.pipeline:insilicoich_cli" # keeping for now for backwards compatibility
recruit = "insilicoICH.recruit_study:recruitment_cli"