[project]
name = "InSilicoICH"
version = "0.4.0"
authors = [
  {name="Brandon Nelson", email="brandon.nelson@fda.hhs.gov"},
  {name="Jayse M. Weaver", email="jayse.weaver@fda.hhs.gov"}
]
description = "CT Simulations of virtual pediatric intracranial hemorrhage for computer aided triage device evaluation"
readme = "README.rst"
requires-python = ">=3.11, <3.13"
dependencies = [
  "python-dotenv",
  "nibabel",
  "scikit-image",
  "scipy",
  "monai==1.3.2",
  "SimpleITK",
  "pydicom",
  "requests",
  "noise",
  "tomli-w"
  # "VITools @ git+https://github.com/DIDSR/VITools.git"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/DIDSR/InSilicoICH"
Issues = "https://github.com/DIDSR/InSilicoICH/issues"

[project.scripts]
generate = "insilicoICH.study:run_simulation_cli"
recruit = "insilicoICH.study:recruit_patients_cli"

[project.entry-points."VITools"] # Must match PROJECT_NAME
head_phantoms = "insilicoICH.phantoms.head_phantoms"
